# webterminal

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json
backend/: Cargo.toml
backend/src/: main.rs
docs/: test-matrix.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
tests/: tmux-control.integration.mjs
